--- a/tab.css
+++ b/tab.css
@@ -3,6 +3,15 @@ html {
   background-color: lightgray;
 }
 
+h1 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
+  color: #111111;
+}
+
 table {
   background-color: white;
   border-radius: 1em;
@@ -165,4 +174,95 @@ table td.pages div {
   width: 298px;
   min-width: 298px;
   height: 50px;
+}
+.menuContainer{
+  display: flex;
+  justify-content: space-between;
+  width:1000px;
+  margin-top: 32px
+}
+.menuItem{
+  height: 42px;
+  width: 190px;
+  border:1px solid grey;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menuItem input{
+  width: 150px;
+  margin-left: 10px;
+  background-color: inherit;
+  outline: none;
+  border:none;
+  font-size: 15px;
+  color:grey;
+}
+
+.menuItemDate{
+  margin-top: -22px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 22px;
+  color: #6B6F7B;
+
+}
+.d-flex{
+  display: flex;
+}
+
+.searchByDate{
+  color: #6B6F7B;
+}
+.item{
+  width:1000px;
+}
+
+main .list {
+	width: 100%;
+	max-width: 768px;
+	background-color: #FFF;
+	border: 1px solid #CCC;
+	margin-top: 25px;
+}
+
+
+
+.pagenumbers {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.pagenumbers button {
+	width: 50px;
+	height: 50px;
+
+	appearance: none;
+	border: none;
+	outline: none;
+	cursor: pointer;
+
+	background-color: #44AAEE;
+
+	margin: 5px;
+	transition: 0.4s;
+
+	color: #FFF;
+	font-size: 18px;
+	text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+}
+
+.pagenumbers button:hover {
+	background-color: #44EEAA;
+}
+
+.pagenumbers button.active {
+	background-color: #44EEAA;
+	box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
